Z-index fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -1134,7 +1134,7 @@ video {
 
 .profile_pic.col-sm-2 a img {
     position: relative;
-    z-index: 99999;
+    z-index: 999;
 }
 
 @media handheld, only screen and (max-width:991px) {
